--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -8,6 +8,11 @@
 }
 
 /* share style */
+
+.secoundary-bg{
+    background-color: #fff8f3;
+}
+
 .text-primary{
     color: #FD6E0A;
 }
@@ -23,6 +28,18 @@
     padding: 18px 35px;
     border-radius: 5px;
 }
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
 /* header */
 .header{
     background-image: url("../image/developer.png"), url("../image/header_bg.png");
@@ -79,4 +96,26 @@ nav li a{
 
 .banner-prfile-pic{
     width: 580px;
+}
+
+/* main style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about style */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600px;
 }
