--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -40,6 +40,10 @@
     color: #757575;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* header */
 .header{
     background-image: url("../image/developer.png"), url("../image/header_bg.png");
@@ -108,7 +112,11 @@ main{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
+    
+}
+main section{
     margin-top: 130px;
+    margin-bottom: 130px;
 }
 
 .about-items{
@@ -118,4 +126,17 @@ main{
 
 .item-description{
     font-weight: 600px;
+}
+
+/* skills section styles */
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
