--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -186,3 +186,40 @@ display: block;
     margin-bottom: 24px;
     border: none;
 }
+
+/* renponsive area */
+.hide{
+    display: none;
+}
+
+@media screen and (max-width: 576px) {
+    .skills-container, .resume-container, footer, .banner, nav, nav > ul, .about-items{
+        flex-direction: column;
+    }
+
+    footer, .about{
+        padding: 20px;
+    }
+
+    nav > ul{
+        gap: 20px;
+    }
+
+    .banner{
+        margin: 20px;
+    }
+    .banner-prfile-pic{
+        width: 100%;
+    }
+    .header{
+        background-image: none;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    footer input[type="text"],footer input[type="email"],footer textarea{
+        width: calc(100% - 40px );
+
+    
+}
+}
